# rust-first-lib-publish

./: Cargo.toml
src/: lib.rs  main.rs
