[package]
name = "Even_odd_checker"
version = "0.1.0"
edition = "2021"
description= "A library for find even/odd number after entering number in cmd arguments"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored="^2.0.0"

[profile.dev]
opt-level=0

[profile.release]
opt-level =3
